src/codegen/riscv/tests/snapshots/cdec__codegen__riscv__tests__expr__binop.snap
---
source: src/codegen/riscv/tests/expr.rs
expression: codegen.to_string()
---
main:
    prologue:
        mv fp, sp
        sub sp, sp, 20
    entry:
        lw x32, -4(fp)
        ld x33, -12(fp)
        lw x34, x33
        add x35, x32, x34
        sw x35, -4(fp)
        ld x36, -12(fp)
        sub x37, x36, 4
        sd x37, -12(fp)
        add x38, fp, -16
        flw f32, x38
        add x39, fp, -20
        flw f33, x39
        fmul.s f34, f32, f33
        fsw f34, -16(fp)
        ld x42, -12(fp)
        snez x43, x42
        snez x41, x43
        beqz x41, and_merge
    and_right:
        add x44, fp, -16
        flw f35, x44
        li x45, 0
        fmv.s.x f36, x45
        feq.s x45, f35, f36
        snez x41, x45
        j x41, and_merge
    and_merge:
        snez x46, x41
        snez x40, x46
        bnez x40, or_merge
    or_right:
        add x47, fp, -20
        flw f37, x47
        li x48, 0
        fmv.s.x f38, x48
        feq.s x48, f37, f38
        snez x40, x48
        j x40, or_merge
    or_merge:
        sll x49, x40, 56
        srl x49, x49, 56
        sw x49, -4(fp)
        li a0, 0
        ret
