src/codegen/riscv/tests/snapshots/cdec__codegen__riscv__tests__expr__call.snap
---
source: src/codegen/riscv/tests/expr.rs
expression: codegen.to_string()
---
f:
    prologue:
        sd ra, -8(sp)
        sd sp, -16(sp)
        sd fp, -24(sp)
        mv fp, sp
        add sp, sp, -28
    entry:
        sd a0, -28(fp)
        lw x33, -28(fp)
        li x36, 1
        sub x35, x33, x36
        seqz x34, x35
        snez x37, x34
        snez x32, x37
        la x38, or_merge
        bnez x32, x38
    or_right:
        lw x39, -28(fp)
        li x42, 2
        sub x41, x39, x42
        seqz x40, x41
        snez x43, x40
        snez x32, x43
        j x32, or_merge
    or_merge:
        snez x44, x32
        la x45, if_else
        beqz x44, x45
    if_then:
        li x46, 1
        mv a0, x46
        ld ra, -8(fp)
        ld sp, -16(fp)
        ld fp, -24(fp)
        ret 
        j if_merge
    if_else:
    if_merge:
        lw x47, -28(fp)
        li x49, 1
        sub x48, x47, x49
        mv a0, x48
        call f
        lw x50, -28(fp)
        li x52, 2
        sub x51, x50, x52
        mv a0, x51
        call f
        add x53, a0, a0
        mv a0, x53
        ld ra, -8(fp)
        ld sp, -16(fp)
        ld fp, -24(fp)
        ret 
        li a0, 0
        ld ra, -8(fp)
        ld sp, -16(fp)
        ld fp, -24(fp)
        ret 
main:
    prologue:
        sd ra, -8(sp)
        sd sp, -16(sp)
        sd fp, -24(sp)
        mv fp, sp
        add sp, sp, -32
    entry:
        lw x54, -32(fp)
        mv a0, x54
        call f
        sw a0, -28(fp)
        li a0, 0
        ld ra, -8(fp)
        ld sp, -16(fp)
        ld fp, -24(fp)
        ret 
    .global f
    .global main
