src/codegen/riscv/tests/snapshots/cdec__codegen__riscv__tests__expr__cast.snap
---
source: src/codegen/riscv/tests/expr.rs
expression: codegen.to_string()
---
    .global main
    .section .text
main:
    prologue:
        sd ra, -8(sp)
        sd sp, -16(sp)
        sd fp, -24(sp)
        mv fp, sp
        add sp, sp, -64
    entry:
        lh t0, -40(fp)
        and t0, t0, 1
        sb t0, -32(fp)
        lwu t0, -48(fp)
        and t0, t0, 1
        sb t0, -32(fp)
        lb t0, -32(fp)
        sll t0, t0, 56
        sra t0, t0, 56
        sh t0, -40(fp)
        lb t0, -32(fp)
        sll t0, t0, 56
        sra t0, t0, 56
        sw t0, -48(fp)
        flw ft0, -56(fp)
        fcvt.l.s t0, ft0
        sb t0, -32(fp)
        lwu t0, -48(fp)
        fcvt.s.lu ft0, t0
        fsw ft0, -56(fp)
        lh t0, -40(fp)
        fcvt.d.l ft0, t0
        fsd ft0, -64(fp)
        fld ft0, -64(fp)
        fcvt.l.d t0, ft0
        sh t0, -40(fp)
        li a0, 0
        ld ra, -8(fp)
        ld sp, -16(fp)
        ld fp, -24(fp)
        ret 
    .section .data
