src/codegen/riscv/tests/snapshots/cdec__codegen__riscv__tests__expr__conditional.snap
---
source: src/codegen/riscv/tests/expr.rs
expression: codegen.to_string()
---
main:
    prologue:
        sd ra, -8(sp)
        sd sp, -16(sp)
        sd fp, -24(sp)
        mv fp, sp
        add sp, sp, -40
    entry:
        lw x33, -32(fp)
        snez x34, x33
        la x35, cond_false
        beqz x34, x35
        j cond_true
    cond_true:
        lw x36, -36(fp)
        mv x32, x36
        j cond_merge
    cond_false:
        lw x37, -40(fp)
        mv x32, x37
        j cond_merge
    cond_merge:
        sw x32, -28(fp)
        li a0, 0
        ld ra, -8(fp)
        ld sp, -16(fp)
        ld fp, -24(fp)
        ret 
    .global main
