src/codegen/riscv/tests/snapshots/cdec__codegen__riscv__tests__expr__subscript.snap
---
source: src/codegen/riscv/tests/expr.rs
expression: codegen.to_string()
---
    .global main
    .section .text
main:
    prologue:
        sd ra, -8(sp)
        sd sp, -16(sp)
        sd fp, -24(sp)
        mv fp, sp
        add sp, sp, -272
    entry:
        li t1, 2
        li t0, 4
        mul t1, t1, t0
        add t0, fp, -48
        add t2, t0, t1
        li t1, 3
        li t0, 4
        mul t1, t1, t0
        add t0, fp, -48
        add t0, t0, t1
        lw t0, 0(t0)
        sw t0, 0(t2)
        li t1, 4
        li t0, 32
        mul t1, t1, t0
        add t0, fp, -272
        add t2, t0, t1
        li t1, 5
        li t0, 4
        mul t0, t1, t0
        add t2, t2, t0
        li t1, 6
        li t0, 32
        mul t1, t1, t0
        add t0, fp, -272
        add t3, t0, t1
        li t1, 7
        li t0, 4
        mul t0, t1, t0
        add t0, t3, t0
        lw t0, 0(t0)
        sw t0, 0(t2)
        li a0, 0
        ld ra, -8(fp)
        ld sp, -16(fp)
        ld fp, -24(fp)
        ret 
    .section .data
