src/codegen/riscv/tests/snapshots/cdec__codegen__riscv__tests__expr__unaryop.snap
---
source: src/codegen/riscv/tests/expr.rs
expression: codegen.to_string()
---
main:
    prologue:
        sd ra, -8(sp)
        sd sp, -16(sp)
        sd fp, -24(sp)
        mv fp, sp
        add sp, sp, -64
    entry:
        add t0, fp, -40
        sd t0, -48(fp)
        ld t0, -40(fp)
        lw t0, 0(t0)
        sw t0, -32(fp)
        lw t0, -32(fp)
        not t0, t0
        sw t0, -32(fp)
        flw ft0, -64(fp)
        fneg.s ft0, ft0
        fsw ft0, -56(fp)
        ld t1, -40(fp)
        lw t0, -32(fp)
        snez t0, t0
        seqz t0, t0
        sll t0, t0, 56
        srl t0, t0, 56
        sw t0, 0(t1)
        ld t0, -48(fp)
        add t0, t0, 8
        sd t0, -48(fp)
        ld t0, -48(fp)
        add t0, t0, -8
        sd t0, -48(fp)
        ld t0, -48(fp)
        add t0, t0, -8
        sd t0, -48(fp)
        ld t0, -48(fp)
        add t0, t0, 8
        sd t0, -48(fp)
        li a0, 0
        ld ra, -8(fp)
        ld sp, -16(fp)
        ld fp, -24(fp)
        ret 
    .global main
